# laboratory_manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py
accounts/migrations/: 0002_user_is_verified.py  0003_auto_20231028_1446.py  0003_user_followers_user_following_user_profile_picture.py  0004_auto_20231028_1514.py  0004_user_username.py  0005_auto_20231028_1540.py  0006_alter_user_username.py  0007_alter_user_username.py
accounts/models/: user.py
calendarapp/: decorators.py  forms.py  urls.py
calendarapp/migrations/: 0001_initial.py
calendarapp/models/: event.py
calendarapp/views/: __init__.py  event_list.py  other_views.py
eventcalendar/: settings.py  urls.py  views.py
forum/: admin.py  models.py  urls.py  views.py
forum/migrations/: 0001_initial.py
protocolsapp/: AI.py  admin.py  apps.py  forms.py  models.py  test.py  tests.py  urls.py  views.py
protocolsapp/migrations/: 0001_initial.py  0002_delete_chatresponse.py  0003_alter_protocols_file.py  0004_alter_protocols_file.py
reagentsapp/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
reagentsapp/migrations/: 0001_initial.py  0002_auto_20230815_1717.py  0003_alter_reagents_cat_number.py  0004_reagents_quantity_reagents_unit.py  0005_alter_reagents_unit.py  0006_reagents_used_alter_reagents_unit.py  0007_alter_reagents_unit.py  0008_rename_used_reagents_remained.py  0009_alter_reagents_remained.py  (+3 more)
samplesapp/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
templates/: base.html
(+40 files in other folders)
